--- a/en/colophon/index.html
+++ b/en/colophon/index.html
@@ -1,18 +1,63 @@
-<!DOCTYPE html><html lang="en"><head><title>Colophon - Marc-André Goyette</title><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="author" content="Marc-André Goyette"/><meta name="description" content="Presentation of the technologies used to generate the personal website of Marc-André Goyette."/><link type="text/css" rel="stylesheet" href="/styles/styles.css"/></head><body><nav aria-label="main navigation" class="navbar is-primary"><div class="container"><div class="navbar-brand is-family-secondary"><a href="/en" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div><div id="topNavbar" class="navbar-menu is-active"><div class="navbar-start"><a href="/en" class="navbar-item is-tab">Blog</a><a href="/en/about" class="navbar-item is-tab">About</a><a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a></div></div></div></nav><div class="container"><main><article class="card post"><div class="card-content"><div></div><div class="content"><a href="/en/colophon/"><h1 class="title is-family-secondary">Colophon</h1></a><h2>Constraints</h2>
-<p>I chose to adopt some constraints while building this web site.</p>
-<p><strong>Static site</strong>: The web site will be static and generated with my own static site generator.</p>
-<p><strong>JavaScript</strong>: Avoid as much as possible the use of JavaScript.</p>
-<p><strong>Tracking</strong>: Do not add Google Analytics or other trackers.</p>
-<h2>Fonts</h2>
-<p>The majority of the text on this web site use two open source fonts created by <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>:</p>
-<ul>
-<li>
-<p>Titles use <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, a serif font.</p>
-</li>
-<li>
-<p>Texts use <a href="https://github.com/huertatipografica/Alegreya-Sans">Alegreya Sans</a>, the sans serif equivalent of Alegreya.</p>
-</li>
-</ul>
-<p>I chose these two fonts because of their litterary appearance. They create a different ambiance than the popular sans serif fonts that are used all around the web.</p>
-<p>Code blocks use a monospace font that varies depending on the fonts installed on the operating system.</p>
-</div><div class="tags"></div></div></article></main><footer class="footer"><p>Copyright © 2019 Marc-André Goyette</p><p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p><p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p></footer></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>Colophon - Marc-André Goyette</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Marc-André Goyette" />
+  <meta name="description" content="Presentation of the technologies used to generate the personal website of Marc-André Goyette." />
+  <link type="text/css" rel="stylesheet" href="/styles/styles.css" />
+</head>
+
+<body>
+  <nav aria-label="main navigation" class="navbar is-primary">
+    <div class="container">
+      <div class="navbar-brand is-family-secondary"><a href="/en" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
+      <div id="topNavbar" class="navbar-menu is-active">
+        <div class="navbar-start"><a href="/en" class="navbar-item is-tab">Blog</a> <a href="/en/about" class="navbar-item is-tab">About</a> <a href="/feeds/languages/en/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <main>
+      <article class="card post">
+        <div class="card-content">
+          <div></div>
+          <div class="content"><a href="/en/colophon/">
+              <h1 class="title is-family-secondary">Colophon</h1>
+            </a>
+            <h2>Constraints</h2>
+            <p>I chose to adopt some constraints while building this web site.</p>
+            <p><strong>Static site</strong>: The web site will be static and generated with my own static site generator.</p>
+            <p><strong>JavaScript</strong>: Avoid as much as possible the use of JavaScript.</p>
+            <p><strong>Tracking</strong>: Do not add Google Analytics or other trackers.</p>
+            <h2>Fonts</h2>
+            <p>The majority of the text on this web site use two open source fonts created by <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>:</p>
+            <ul>
+              <li>
+                <p>Titles use <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, a serif font.</p>
+              </li>
+              <li>
+                <p>Texts use <a href="https://github.com/huertatipografica/Alegreya-Sans">Alegreya Sans</a>, the sans serif equivalent of Alegreya.</p>
+              </li>
+            </ul>
+            <p>I chose these two fonts because of their litterary appearance. They create a different ambiance than the popular sans serif fonts that are used all around the web.</p>
+            <p>Code blocks use a monospace font that varies depending on the fonts installed on the operating system.</p>
+          </div>
+          <p>
+            <div class="tags"></div>
+          </p>
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <p>Copyright © 2019 Marc-André Goyette</p>
+      <p>The content of this site is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/">Creative Commons License (CC BY-ND 4.0)</a>.</p>
+      <p>Opinions expressed on this site are solely my own, not those of my present or past employers.</p>
+    </footer>
+  </div>
+</body>
+
+</html>
