--- a/fr/a-propos/index.html
+++ b/fr/a-propos/index.html
@@ -1,3 +1,48 @@
-<!DOCTYPE html><html lang="fr"><head><title>À propos - Marc-André Goyette</title><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="author" content="Marc-André Goyette"/><meta name="description" content="Présentation de Marc-André Goyette, un programmeur qui écrit sur le développement logiciel, les technologies et plusieurs autre sujets."/><link type="text/css" rel="stylesheet" href="/styles/styles.css"/></head><body><nav aria-label="main navigation" class="navbar is-primary"><div class="container"><div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div><div id="topNavbar" class="navbar-menu is-active"><div class="navbar-start"><a href="/" class="navbar-item is-tab">Blogue</a><a href="/fr/a-propos" class="navbar-item is-tab">À propos</a><a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a></div></div></div></nav><div class="container"><main><article class="card post"><div class="card-content"><div></div><div class="content"><a href="/fr/a-propos/"><h1 class="title is-family-secondary">À propos</h1></a><p>Ce site est mon site web personnel.</p>
-<p>Pour plus de détails à propos du site web lui-même, consultez le <a href="../colophon/">colophon</a>.</p>
-</div><div class="tags"></div></div></article></main><footer class="footer"><p>Copyright © 2019 Marc-André Goyette</p><p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p><p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p></footer></div></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <title>À propos - Marc-André Goyette</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Marc-André Goyette" />
+  <meta name="description" content="Présentation de Marc-André Goyette, un programmeur qui écrit sur le développement logiciel, les technologies et plusieurs autre sujets." />
+  <link type="text/css" rel="stylesheet" href="/styles/styles.css" />
+</head>
+
+<body>
+  <nav aria-label="main navigation" class="navbar is-primary">
+    <div class="container">
+      <div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
+      <div id="topNavbar" class="navbar-menu is-active">
+        <div class="navbar-start"><a href="/" class="navbar-item is-tab">Blogue</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <main>
+      <article class="card post">
+        <div class="card-content">
+          <div></div>
+          <div class="content"><a href="/fr/a-propos/">
+              <h1 class="title is-family-secondary">À propos</h1>
+            </a>
+            <p>Ce site est mon site web personnel.</p>
+            <p>Pour plus de détails à propos du site web lui-même, consultez le <a href="../colophon/">colophon</a>.</p>
+          </div>
+          <p>
+            <div class="tags"></div>
+          </p>
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <p>Copyright © 2019 Marc-André Goyette</p>
+      <p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p>
+      <p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p>
+    </footer>
+  </div>
+</body>
+
+</html>
