--- a/fr/colophon/index.html
+++ b/fr/colophon/index.html
@@ -1,18 +1,63 @@
-<!DOCTYPE html><html lang="fr"><head><title>Colophon - Marc-André Goyette</title><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="author" content="Marc-André Goyette"/><meta name="description" content="Présentation sur les technologies utilisées pour générer le site personnel de Marc-André Goyette."/><link type="text/css" rel="stylesheet" href="/styles/styles.css"/></head><body><nav aria-label="main navigation" class="navbar is-primary"><div class="container"><div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div><div id="topNavbar" class="navbar-menu is-active"><div class="navbar-start"><a href="/" class="navbar-item is-tab">Blogue</a><a href="/fr/a-propos" class="navbar-item is-tab">À propos</a><a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a></div></div></div></nav><div class="container"><main><article class="card post"><div class="card-content"><div></div><div class="content"><a href="/fr/colophon/"><h1 class="title is-family-secondary">Colophon</h1></a><h2>Contraintes</h2>
-<p>J'ai choisi d'adopter certaines contraintes lors de la création de ce site web.</p>
-<p><strong>Site statique</strong>: Créer un site statique généré avec mon propre générateur de site statique.</p>
-<p><strong>JavaScript</strong>: Éviter le plus possible l'utilisation de JavaScript.</p>
-<p><strong>Tracking</strong>: Ne pas ajouter Google Analytics ou de tracking.</p>
-<h2>Polices de caractères</h2>
-<p>La plupart des textes sur ce site web utilisent deux polices de caractères libres crées par <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>:</p>
-<ul>
-<li>
-<p>Les titres utilisent la police <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, une police avec serif.</p>
-</li>
-<li>
-<p>Les textes utilisent la police <a href="https://github.com/huertatipografica/Alegreya-Sans">Alegreya Sans</a>, l'équivalent sans serif d'Alegreya.</p>
-</li>
-</ul>
-<p>J'ai choisi ces deux polices en raison de leur aspect littéraire et calligraphique, qui crée une atmosphère différente que les polices sans serif populaires qui sont utilisées partout sur le web.</p>
-<p>Les blocs de code utilisent une police monospace qui varie en fonction des polices installées sur le système.</p>
-</div><div class="tags"></div></div></article></main><footer class="footer"><p>Copyright © 2019 Marc-André Goyette</p><p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p><p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p></footer></div></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+  <title>Colophon - Marc-André Goyette</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Marc-André Goyette" />
+  <meta name="description" content="Présentation sur les technologies utilisées pour générer le site personnel de Marc-André Goyette." />
+  <link type="text/css" rel="stylesheet" href="/styles/styles.css" />
+</head>
+
+<body>
+  <nav aria-label="main navigation" class="navbar is-primary">
+    <div class="container">
+      <div class="navbar-brand is-family-secondary"><a href="/" class="navbar-item has-text-weight-bold">Marc-André Goyette</a></div>
+      <div id="topNavbar" class="navbar-menu is-active">
+        <div class="navbar-start"><a href="/" class="navbar-item is-tab">Blogue</a> <a href="/fr/a-propos" class="navbar-item is-tab">À propos</a> <a href="/feeds/languages/fr/atom.xml" class="navbar-item is-tab">Atom/RSS</a> </div>
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+    <main>
+      <article class="card post">
+        <div class="card-content">
+          <div></div>
+          <div class="content"><a href="/fr/colophon/">
+              <h1 class="title is-family-secondary">Colophon</h1>
+            </a>
+            <h2>Contraintes</h2>
+            <p>J'ai choisi d'adopter certaines contraintes lors de la création de ce site web.</p>
+            <p><strong>Site statique</strong>: Créer un site statique généré avec mon propre générateur de site statique.</p>
+            <p><strong>JavaScript</strong>: Éviter le plus possible l'utilisation de JavaScript.</p>
+            <p><strong>Tracking</strong>: Ne pas ajouter Google Analytics ou de tracking.</p>
+            <h2>Polices de caractères</h2>
+            <p>La plupart des textes sur ce site web utilisent deux polices de caractères libres crées par <a href="https://www.huertatipografica.com/en">Huerta Tipográfica</a>:</p>
+            <ul>
+              <li>
+                <p>Les titres utilisent la police <a href="https://github.com/huertatipografica/Alegreya">Alegreya</a>, une police avec serif.</p>
+              </li>
+              <li>
+                <p>Les textes utilisent la police <a href="https://github.com/huertatipografica/Alegreya-Sans">Alegreya Sans</a>, l'équivalent sans serif d'Alegreya.</p>
+              </li>
+            </ul>
+            <p>J'ai choisi ces deux polices en raison de leur aspect littéraire et calligraphique, qui crée une atmosphère différente que les polices sans serif populaires qui sont utilisées partout sur le web.</p>
+            <p>Les blocs de code utilisent une police monospace qui varie en fonction des polices installées sur le système.</p>
+          </div>
+          <p>
+            <div class="tags"></div>
+          </p>
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <p>Copyright © 2019 Marc-André Goyette</p>
+      <p>Le contenu de ce site est disponible selon les termes d&#x27;une <a rel="license" href="https://creativecommons.org/licenses/by-nd/4.0/deed.fr">licence Creative Commons (CC BY-ND 4.0)</a>.</p>
+      <p>Les opinions exprimées sur ce site sont uniquement les miennes et ne représentent pas celles de mes employeurs actuels ou passés.</p>
+    </footer>
+  </div>
+</body>
+
+</html>
